bindings/bindings-swift/smpp_codec_ffiFFI.h

uint16_t uniffi_smpp_codec_ffi_checksum_func_decode_replace_sm_request(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_decode_replace_sm_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_decode_submit_multi_request(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_decode_submit_multi_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_decode_submit_sm_request(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_decode_submit_sm_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_decode_unbind(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_decode_unbind_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_bind_request(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_bind_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_broadcast_sm_request(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_broadcast_sm_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_cancel_broadcast_sm_request(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_cancel_broadcast_sm_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_cancel_sm_request(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_cancel_sm_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_data_sm(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_data_sm_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_deliver_sm(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_delivery_receipt(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_delivery_sm_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_enquire_link(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_enquire_link_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_generic_nack(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_outbind(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_query_broadcast_sm_request(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_query_broadcast_sm_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_query_sm_request(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_query_sm_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_replace_sm_request(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_replace_sm_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_submit_multi_request(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_submit_multi_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_submit_sm_request(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_submit_sm_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_unbind(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_encode_unbind_response(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_split_message(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_tlv_decode(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_tlv_encode(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_tlv_new(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_tlv_new_from_name(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_tlv_new_payload(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_tlv_new_string(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_tlv_new_u16(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_tlv_new_u16_from_name(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_tlv_new_u8(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_tlv_new_u8_from_name(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_tlv_value_as_string(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_tlv_value_as_u16(void
    
);
uint16_t uniffi_smpp_codec_ffi_checksum_func_tlv_value_as_u8(void
    
);
uint32_t ffi_smpp_codec_ffi_uniffi_contract_version(void
    
);