bindings/bindings-python/smpp_codec_ffi.py

_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_replace_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_replace_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_replace_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_submit_multi_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_submit_multi_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_submit_multi_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_submit_multi_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_submit_sm_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_submit_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_submit_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_submit_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_unbind.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_unbind.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_unbind_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_decode_unbind_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_bind_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_bind_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_bind_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_bind_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_broadcast_sm_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_broadcast_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_broadcast_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_broadcast_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_cancel_broadcast_sm_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_cancel_broadcast_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_cancel_broadcast_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_cancel_broadcast_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_cancel_sm_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_cancel_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_cancel_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_cancel_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_data_sm.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_data_sm.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_data_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_data_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_deliver_sm.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_deliver_sm.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_delivery_receipt.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_delivery_receipt.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_delivery_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_delivery_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_enquire_link.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_enquire_link.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_enquire_link_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_enquire_link_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_generic_nack.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_generic_nack.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_outbind.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_outbind.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_query_broadcast_sm_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_query_broadcast_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_query_broadcast_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_query_broadcast_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_query_sm_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_query_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_query_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_query_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_replace_sm_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_replace_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_replace_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_replace_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_submit_multi_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_submit_multi_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_submit_multi_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_submit_multi_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_submit_sm_request.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_submit_sm_request.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_submit_sm_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_submit_sm_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_unbind.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_unbind.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_unbind_response.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_encode_unbind_response.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_split_message.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_split_message.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_decode.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_decode.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_encode.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_encode.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_from_name.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_from_name.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_payload.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_payload.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_string.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_string.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_u16.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_u16.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_u16_from_name.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_u16_from_name.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_u8.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_u8.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_u8_from_name.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_new_u8_from_name.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_value_as_string.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_value_as_string.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_value_as_u16.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_value_as_u16.restype = ctypes.c_uint16
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_value_as_u8.argtypes = (
)
_UniffiLib.uniffi_smpp_codec_ffi_checksum_func_tlv_value_as_u8.restype = ctypes.c_uint16
_UniffiLib.ffi_smpp_codec_ffi_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_smpp_codec_ffi_uniffi_contract_version.restype = ctypes.c_uint32

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)

# Public interface members begin here.


class _UniffiConverterUInt8(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u8"
    VALUE_MIN = 0
    VALUE_MAX = 2**8

    @staticmethod
    def read(buf):
        return buf.read_u8()

    @staticmethod
    def write(value, buf):
        buf.write_u8(value)

class _UniffiConverterUInt16(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u16"
    VALUE_MIN = 0
    VALUE_MAX = 2**16

    @staticmethod
    def read(buf):
        return buf.read_u16()

    @staticmethod
    def write(value, buf):
        buf.write_u16(value)

class _UniffiConverterUInt32(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u32"
    VALUE_MIN = 0
    VALUE_MAX = 2**32

    @staticmethod
    def read(buf):
        return buf.read_u32()

    @staticmethod
    def write(value, buf):
        buf.write_u32(value)

class _UniffiConverterString:
    @staticmethod
    def check_lower(value):
        if not isinstance(value, str):
            raise TypeError("argument must be str, not {}".format(type(value).__name__))
        return value

    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative string length")
        utf8_bytes = buf.read(size)
        return utf8_bytes.decode("utf-8")

    @staticmethod
    def write(value, buf):
        utf8_bytes = value.encode("utf-8")
        buf.write_i32(len(utf8_bytes))
        buf.write(utf8_bytes)

    @staticmethod
    def lift(buf):
        with buf.consume_with_stream() as stream:
            return stream.read(stream.remaining()).decode("utf-8")

    @staticmethod
    def lower(value):
        with _UniffiRustBuffer.alloc_with_builder() as builder:
            builder.write(value.encode("utf-8"))
            return builder.finalize()

class _UniffiConverterBytes(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative byte string length")
        return buf.read(size)

    @staticmethod
    def check_lower(value):
        try:
            memoryview(value)
        except TypeError:
            raise TypeError("a bytes-like object is required, not {!r}".format(type(value).__name__))

    @staticmethod
    def write(value, buf):
        buf.write_i32(len(value))
        buf.write(value)



class TagsProtocol(typing.Protocol):
    """
    Collection of standard SMPP TLV tags.
    """

    pass


class Tags:
    """
    Collection of standard SMPP TLV tags.
    """

    _pointer: ctypes.c_void_p
